
The Injection-Date: header, when present, is now used by B<innd> and
B<makehistory> to determine the posting date of an article.  Otherwise,
the Date: header is used.

=item *

B<nnrpd> no longer adds or updates the Path: header field when an article is
forwarded to a moderator.  It could otherwise lead to rejects at injection
time when the article was approved by the moderator.

=item *

B<pullnews> no longer stops processing newsgroups when an error occur during
its run (for instance when a newsgroup mentioned in the configuration file
is removed from an upstream server).  Besides, it can now use authentication
when posting to the downstream server.

A few other minor bugs have been fixed as for the way B<pullnews> counts
the articles.

=item *

A new parameter has been added to F<inn.conf> to determine whether the status
file that B<innd> can write out (depending on the value of the I<status>
parameter) is plain text or wrapped in HTML.  It previously only was a
compile-time option, set to true by default.  Florian Schlichting added
the I<htmlstatus> parameter to provide a configurable behaviour.

=item *

It is now possible to run a script at the end of the execution of
B<innshellvars> scripts.  If a file named F<innshellvars.local>,
F<innshellvars.pl.local> or F<innshellvars.tcl.local> is present and
executable in I<pathetc>, then it will be executed by the corresponding
B<innshellvars> script (respectively shell, INN::Config Perl module,
and Tcl).  A typical use is to add or override variables.

=item *

Other minor bug fixes and documentation improvements.  In particular, the
I<debug-shrinking>, I<fast-exit> and I<initial-sleep> keys in F<innfeed.conf>
are now documented.

=back

=head1 Changes in 2.5.2

The way checkpoints are handled by B<innreport> for B<innd> and B<innfeed>
has totally changed to provide more accurate daily statistics.  The first
Usenet report after an upgrade to S<INN 2.5.2> will probably contain